[package]
name = "stronghold"
default-run = "stronghold_bin"
version = "0.1.0"
authors = ["Knarkzel <knarkzel@gmail.com>"]
edition = "2021"
rust-version = "1.60"

[[bin]]
name = "stronghold_bin"
path = "src/main.rs"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
egui = "0.18"
eframe = "0.18"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tracing-subscriber = "0.3"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
tracing-wasm = "0.2"

[profile.release]
opt-level = 2
